[package]
name = "rs_lavafloor"
version = "0.1.0"
authors = ["Troligtvis <karljohan@codefork.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1" #{ git = "https://github.com/bevyengine/bevy.git" } #"0.1.3" # https://github.com/bevyengine/bevy.git
rand = "0.7.3"