[package]
name = "rs_lavafloor"
version = "0.1.0"
authors = ["Troligtvis <karljohan.drougge@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8" 
rand = "0.8"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!