[package]
name = "rs_lavafloor"
version = "0.1.0"
authors = ["Troligtvis <karljohan.drougge@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.8", features = ["dynamic"] } 
rand = "0.8"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!